--- a/examples/blogprj/templates/base.html
+++ b/examples/blogprj/templates/base.html
@@ -3,10 +3,38 @@
 <html>
 <head>
     <title>My little blog</title>
-    
+
+    <style type="text/css" media="screen">
+        .post {
+            padding: 10px;
+            border: 1px #999 solid;
+            border-left: 10px #BCF1AA solid;
+            border-bottom: 3px solid #999;
+            border-right: 3px solid #999;
+            margin: 15px;
+        }
+        h1 {
+            margin: 0;
+        }
+        .title {
+            
+        }
+        .infobar {
+            font-size: 90%;
+            color: #505050;
+        }
+        .operations {
+            float: right;
+            font-size: 80%;
+        }
+    </style>
+
     {% block header %}{% endblock %}
     <style type="text/css" media="screen">
-        .not_published {
+        * {
+            font-family: "Trebuchet MS", Verdana, sans-serif;
+        }
+        .not_published *     {
             color: #B4B4B4 !important;
         }
     </style>
